[tool.poetry]
name = "mvm-smart-metering"
version = "0.0.3"
description = "Script for scraping mvm smart meter data"
authors = ["ktomi96 <kokai.tamas.96@gmail.com>"]
readme = "README.md"
packages = [{include = "mvm_smart_meter"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
webdriver-manager = "^3.8.5"
requestium = "^0.1.15"
pandas = "^1.5.3"
sphinx-rtd-theme = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
